source/stylesheets/screen.styl
@import nib
@import 'source/stylesheets/font-awesome'
@import 'source/stylesheets/defaults/index'
@import 'source/stylesheets/mixins/index'
@import 'source/stylesheets/elements/index'

@media (min-width: 581px)
  @import 'source/stylesheets/queries/581'

@media (min-width: 768px)
  @import 'source/stylesheets/queries/768'

@media (min-width: 980px)
  @import 'source/stylesheets/queries/980'

@media (min-width: 1200px)
  @import 'source/stylesheets/queries/1200'

// solves fixed sidebar (all projects) being too long
@media (max-height: 960px)
  body.all.index #container .content-side
    position absolute

// solves fixed sidebar (category show) being too long
@media (max-height: 720px)
  body.categories.show #container .content-side
    position absolute


@import right-to-left

